# chess-robot

./: .gitignore  README.md  docker-compose.yml  package-lock.json  runmac.sh  setup_and_start.sh  setup_and_start_powershell.ps1  start_app.command
backend/: .dockerignore  Dockerfile  db_init.py  play.py  pyproject.toml  requirements.txt  server.py  setup.py  start.sh  test_certabo.py  translator.py
backend/armMovement/: test.py
backend/certabo/: certabo.py  codes.py  serialreader.py
backend/certaboHelper/: certabo.py  codes.py  initCertabo.py  serialreader.py
backend/chessLogic/: chess.py  chessLogic.py
backend/database/: database.ini  db_func.py  db_init.py
backend/robotMovement/: basicRobotMovement.py  chessCoordinates.py  chessRobot.py  robot.conf  save.py
backend/tests/: test_promotion_simple.py
backend/visualModule/: coordinate_definer.py  detect_move.py  stream.py  visualModule.py  visual_module.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.tsx  main.tsx
frontend/src/Components/Alert/: Notification.tsx
frontend/src/Components/Chessboard/: Chessboard.css  Chessboard.jsx  Chessboard.tsx  Tile.css  Tile.tsx  chessDictionary.tsx
frontend/src/Components/ColorPicker/: ColorPicker.tsx  PreGame.tsx
frontend/src/Components/EvalGauge/: EvalGauge.tsx  eval-gauge.css
frontend/src/context/: websocket.jsx
frontend/src/helpers/: fenHandler.tsx  pieces.tsx
frontend/src/pages/Game/: game.jsx  (+4 more)
frontend/src/types/: moves.ts  promo.ts
visualModule/: visualModule.py
(+20 files in other folders)
