[tool.poetry]
name = "chess-backend"
version = "0.1.0"
description = "Chess backend using Certabo and Stockfish"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "1.4.4"
berserk = "0.10.0"
bidict = "0.22.1"
blinker = "1.6.2"
board-to-fen = "0.1.1"
certifi = "2023.5.7"
chardet = "3.0.4"
chess = "1.8.0"
click = "8.1.3"
Deprecated = "1.2.12"
dill = "0.3.6"
Flask = "2.3.2"
Flask-SocketIO = "5.3.4"
future = "0.18.3"
idna = "2.8"
importlib-metadata = "6.7.0"
iso8601 = "2.0.0"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.3"
multiprocess = "0.70.14"
ndjson = "0.3.1"
numpy = "1.25.0"
opencv-python = "4.7.0.72"
Pillow = "10.0.0"
psycopg2 = "2.9.6"
pyserial = "3.4"
python-chess = "1.999"
python-engineio = "4.4.1"
python-socketio = "5.8.0"
PyYAML = "6.0.1"
requests = "2.21.0"
urllib3 = "1.24.3"
websockets = "11.0.3"
Werkzeug = "2.3.6"
wrapt = "1.15.0"
xArm-Python-SDK = "1.11.7"
zipp = "3.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"